created layout of the landing page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delani studiot</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Delani studio</title>
 </head>
 <body>
+    <div class="landingpg">
+        <img src="images/logo/logo.png" alt="logo" id="logo">
+        <h1>WELCOME</h1>
+        <h1>TO DELANI STUDIO</h1>
+        <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGN IN A FUN ENVIRONMENT</P>
+
+    </div>
+
     
+
+    <link rel="stylesheet" href="script.js">
 </body>
 </html>
