--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
         <h1>WELCOME</h1>
         <h1>TO DELANI STUDIO</h1>
         <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGN IN A FUN ENVIRONMENT</P>
+        <div class="mouse-click"></div>
+        <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a>    
+    </div>
+    <div class="container" id= about-us>
+    <h2 id="about">ABOUT US</h2>
+    <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</p>
+    <p>Our approach unifies design, development and product managent to create exceptional products.</p> 
+    <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
+    <p>we help translate them into active and elegant solutions.</p>
+    </div>
+    <div class="services">
+        <div id="servicesoverlay">
+            <h2>SERVICES</h2>
+            <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
+            <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+            <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
 
     </div>
 
