--- a/index.html
+++ b/index.html
@@ -30,6 +30,53 @@
             <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
             <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
             <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div id="design">
+                    <h2 class="title">DESIGN</h2>
+                    <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
+                    <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>   
+                </div>
+                <div class="image">
+                    <img src="images/services_icons/design_icon.png" alt="image of design">
+                    <P>DESIGN</P>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div id="development">
+                    <h2 class="title">DEVELOPMENT</h2>
+                    <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+                    <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                </div>
+                <div class="image">
+                    <img src="images/services_icons/dev_icon.png" alt="development image">
+                    <P>DEVELOPMENT</P>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="products">
+                    <h2 class="title">PRODUCT MANAGEMENT</h2>
+                    <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.</p>
+                    <p>This iterative process allows for changes as business requirements evolve.</p>
+                </div> 
+                <div class="image">
+                    <img src="images/services_icons/product_icon.png" alt="product image">
+                    <P>PRODUCT MANAGEMENT</P>
+                </div>
+            </div>
+        </div>
+        
+
+
 
     </div>
 
