--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="row" id="portfolio">
             <div class="col-md-3" id="work5">
               <img src="images/portfolio/work5.jpg" alt="work1">
-              <p id="overlay5" class="text">Have A Nice Day</p>
+              <p id="overlay5" class="text">Have a Good day</p>
             </div>
             <div class="col-md-3" id="work6">
               <img src="images/portfolio/work6.jpg" alt="work2">
@@ -112,6 +112,45 @@
             </div>
           </div>
       </div> 
+      <!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://gmail.us17.list-manage.com/subscribe/post?u=ee5c2059c30c687067dad0b30&amp;id=815c06b526" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>CONTACT US</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">First Name </label>
+	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">Message </label>
+    <textarea name="message" id="" cols="30" rows="10"></textarea>
+</div>
+
+<p>Powered by <a href="http://eepurl.com/g_jrTj" title="MailChimp - email marketing made easy and fun">MailChimp</a></p>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ee5c2059c30c687067dad0b30_815c06b526" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Contacts us" name="Contact us" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
 
     
 
