--- a/index.html
+++ b/index.html
@@ -137,22 +137,32 @@
 	<label for="mce-FNAME">Message </label>
     <textarea name="message" id="" cols="30" rows="10"></textarea>
 </div>
-
-<p>Powered by <a href="http://eepurl.com/g_jrTj" title="MailChimp - email marketing made easy and fun">MailChimp</a></p>
-	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ee5c2059c30c687067dad0b30_815c06b526" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Contacts us" name="Contact us" id="mc-embedded-subscribe" class="button"></div>
     </div>
-
 </form>
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 
-    
+
+  </div>
+  <footer>
+    <img src="images/social_icons/twitter.png" alt="twitter">
+    <img src="images/social_icons/dribble.png" alt="dribble">
+    <img src="images/social_icons/facebook.png" alt="facebook">
+    <img src="images/social_icons/g_plus.png" alt="g_plus">
+    <img src="images/social_icons/skype.png" alt="skype">
+    <img src="images/social_icons/stumble_upon.png" alt="stumble_upon">
+    <img src="images/social_icons/behance.png" alt="behance">
+    <img src="images/social_icons/pinterest.png" alt="pinterest">
+    <img src="images/social_icons/flickr.png" alt="flickr">
+    <p>DELANI STUDIO</p>
+    <p>2020</p>
+
 
      <link rel="stylesheet" href="script.js">
 
