--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
     <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
     <p>we help translate them into active and elegant solutions.</p>
     </div>
-    <div class="services">
+    <div class="servicespg3">
         <div id="servicesoverlay">
             <h2>SERVICES</h2>
             <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
             <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
             <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+    </div>
     </div>
     <div class="container">
         <div class="row">
@@ -147,7 +148,6 @@
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-
 
   </div>
   <footer>
