added animatin effect to onclick button image

--- a/index.html
+++ b/index.html
@@ -151,17 +151,20 @@
 
   </div>
   <footer>
-    <img src="images/social_icons/twitter.png" alt="twitter">
-    <img src="images/social_icons/dribble.png" alt="dribble">
-    <img src="images/social_icons/facebook.png" alt="facebook">
-    <img src="images/social_icons/g_plus.png" alt="g_plus">
-    <img src="images/social_icons/skype.png" alt="skype">
-    <img src="images/social_icons/stumble_upon.png" alt="stumble_upon">
-    <img src="images/social_icons/behance.png" alt="behance">
-    <img src="images/social_icons/pinterest.png" alt="pinterest">
-    <img src="images/social_icons/flickr.png" alt="flickr">
-    <p>DELANI STUDIO</p>
-    <p>2020</p>
+      <div class="footer">
+        <img src="images/social_icons/twitter.png" alt="twitter">
+        <img src="images/social_icons/dribble.png" alt="dribble">
+        <img src="images/social_icons/facebook.png" alt="facebook">
+        <img src="images/social_icons/g_plus.png" alt="g_plus">
+        <img src="images/social_icons/skype.png" alt="skype">
+        <img src="images/social_icons/stumble_upon.png" alt="stumble_upon">
+        <img src="images/social_icons/behance.png" alt="behance">
+        <img src="images/social_icons/pinterest.png" alt="pinterest">
+        <img src="images/social_icons/flickr.png" alt="flickr">
+        <div></div>
+        <p>DELANI STUDIO</p>
+        <p>2020</p>
+      </div>
 
 
      <link rel="stylesheet" href="script.js">
