--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@
       </div>
 
 
-     <link rel="stylesheet" href="script.js">
-
      </div>
-</body>
+
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+     <script src="script.js"></script>  
+    </body>
 </html>
