correcting images path

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container" id= "body">
     <div class="landingpg">
-        <img src="images/logo/logo.png" alt="logo" id="logo">
+        <img src="./images/logo/logo.png" alt="logo" id="logo">
         <h1>WELCOME</h1>
         <h1>TO DELANI STUDIO</h1>
         <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGN IN A FUN ENVIRONMENT</P>
         <div class="mouse-click"></div>
-        <a href="#about-us"><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a>    
+        <a href="#about-us"><img src="./images/mouse_click.png" alt=" mouse_click" id="mouse-click"></a>    
     </div>
     <div class="container" id= about-us>
     <h2 id="about">ABOUT US</h2>
