added backgroung photo in contact section

--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
         <h2>PORTFOLIO</h2>
         <div class="row" id="portfolio">
           <div class="col-md-3" id="work1">
-            <img src="images/portfolio/work4.jpg" alt="work1" >
+            <img src="images/portfolio/work4.jpg" alt="work1 image" >
             <p id="overlay"class="text">Black Studio</p>
           </div>
           <div class="col-md-3" id="work2">
-            <img src="images/portfolio/work3.jpg" alt="work2" id="work2">
+            <img src="images/portfolio/work3.jpg" alt="work2" id="work2 image">
             <p id="overlay2" class="text">Ontario Security</p>
           </div>
           <div class="col-md-3" id="work3">
-            <img src="images/portfolio/work2.jpg" alt="work3">
+            <img src="images/portfolio/work2.jpg" alt="work3 Image">
             <p id="overlay3"class="text">Pyramids</p>
           </div>
           <div class="col-md-3" id="work4">
-            <img src="images/portfolio/work1.jpg" alt="work4">
-            <p id="overlay4" class="text">Jim Carry</p>
+            <img src="images/portfolio/work1.jpg" alt="work4 image">
+            <p id="overlay4" class="text">Jim Carrey</p>
           </div>
         </div>
         <div class="row" id="portfolio">
             <div class="col-md-3" id="work5">
-              <img src="images/portfolio/work5.jpg" alt="work1">
+              <img src="images/portfolio/work5.jpg" alt="work1 image">
               <p id="overlay5" class="text">Have a Good day</p>
             </div>
             <div class="col-md-3" id="work6">
@@ -111,7 +111,7 @@
             </div>
           </div>
       </div>
-      <div class="form1">
+      <div class="contact">
         <!-- Begin Mailchimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
             <style type="text/css"> 
